# juce_gui_template

./: .gitmodules  CMakeLists.txt  run.sh  update_build.sh
app/: CMakeLists.txt
